--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
-NEXT_PUBLIC_RECAPTCHA_SECRET_KEY=
+RECAPTCHA_SECRET_KEY=
 SMTP_EMAIL=
 SMTP_PASSWORD=
 NEXT_PUBLIC_GOOGLE_PRIVATE_KEY=
