--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next/third-parties": "^14.2.8",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -29,7 +30,7 @@
     "lucide-react": "^0.376.0",
     "mini-svg-data-uri": "^1.4.4",
     "multer": "^1.4.5-lts.1",
-    "next": "14.2.3",
+    "next": "^14.2.8",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
